--- a/Pipfile
+++ b/Pipfile
@@ -5,10 +5,16 @@ verify_ssl = true
 
 [dev-packages]
 flake8 = "*"
+black = "*"
 
 [packages]
 requests = ">=2.20.0"
 flask = ">=1.0.0"
+black = "*"
+ipython = "*"
 
 [requires]
 python_version = "3.7"
+
+[pipenv]
+allow_prereleases = true
